# decode_things

./: .gitignore  .readthedocs.yaml  README.md  setup.cfg
.github/workflows/: decode_things.yml  python-publish.yml
decode_things/: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  setup.cfg
decode_things/decode_things/: SOURCES.md  decode.py
decode_things/src/decode_things/: decode.py  encode.py
decode_things/src/tools/: errors.json
docs/: Codes.md  Decode.md  Encode.md  Error.md  Modules.md
stage/: LICENSE  setup.py
stage/decode_things/: __init__.py  decode.py
