[metadata]
name = decode_things
version = 0.0.1
author = JustWait
author_email = justwaitnano@gmail.com
description = Decode almost anything!
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jamescalam/aesthetic_ascii
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True