[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Decode_Things"
version = "0.0.3"
description = "A package that allows to decode code."
readme = "README.md"
authors = [{ name = "JustWait", email = "justwaitnano@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 1 - Planning",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["Annotation", 
	    "decode", 
	    "decoding",
	    "decode_things",
	    "code",
	    "hex",
	    "bin",
	    "binary",
	    "url",
	    "object",
	    "python",
	    "decode url"
	    ]
dependencies = []
requires-python = ">=3.5"

[project.urls]
Homepage = "https://github.com/justwaitfor-me/decode_things/"

[project.scripts]
